--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.1.2
-tensorflow==2.12.0
+tensorflow-cpu==2.16.1
 gdown==4.7.1
 Pillow==9.3.0
 numpy==1.23.3
-gunicorn==20.1.0  # For running the app in production
-werkzeug==2.1.2   # Utility library for handling requests and responses
+gunicorn==20.1.0
+werkzeug==2.1.2
 
